# compact-mNFT

./: Cargo.toml  README.md  capsule.toml
contracts/compact-nft/: Cargo.toml
contracts/compact-nft/src/: class.rs  entry.rs  issuer.rs  main.rs  nft.rs  type_id.rs  validator.rs
mol/: Cargo.toml
mol/src/: lib.rs  mol.rs  nft_type.mol
script-utils/: Cargo.toml
script-utils/src/: class.rs  hash.rs  helper.rs  helpers.rs  issuer.rs  lib.rs  misc.rs  mol.rs  nft.rs  nft_type.mol  nft_type_2.mol
tests/: Cargo.toml
tests/src/tests/: misc.rs  mod.rs
