[package]
name = "mol"
version = "0.1.0"
edition = "2018"

[dependencies]
cfg-if = "0.1"
ckb-std = {version = "0.7.1", optional = true}
ckb-types =  { version = "0.40.0", optional = true }
molecule = {version = "0.6", default_features = false, optional = true}

[features]
default = ["std","ckb-types"]
std = []
no-std = ["ckb-std","molecule"]