[package]
name = "script-utils"
version = "0.1.0"
edition = "2018"

[dependencies]
ckb-std = {version = "0.7.1", optional = true}
ckb-types =  { version = "0.40.0", optional = true }
molecule = {version = "0.6", default_features = false, optional = true}
blake2b-ref = "0.1"
sparse-merkle-tree = {version = "0.4.0-rc1", default_features = false}
cfg-if = "0.1"

[features]
default = ["std","ckb-types"]
std = []
no-std = ["ckb-std","molecule"]