[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-testtool = "0.4"
ckb-crypto = "0.40.0"
ckb-error = "0.40.0"
ckb-hash = "0.40.0"
ckb-script = "0.40.0"
ckb-traits = "0.40.0"
ckb-types = "0.40.0"
lazy_static = "1.3.0"
rand = "0.6.5"
rand_chacha = "0.1.1"
sparse-merkle-tree = "0.4.0-rc1"
blake2b-rs = "0.1.5"
script-utils = {path = "../script-utils"}